--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,6 @@
+#!/bin/sh
 CUR_PWD=$(pwd)
-export BUILD_DIR=$(realpath "${CUR_PWD}/../build-dcmtk")
+DIR_BASENAME=$(basename ${CUR_PWD})
+export BUILD_DIR=$(realpath "${CUR_PWD}/../build-${DIR_BASENAME}")
 export COMPILE_COMMANDS_JSON=${BUILD_DIR}/compile_commands.json
 
